--- a/tasks/templates/tasks/update.html
+++ b/tasks/templates/tasks/update.html
@@ -1,6 +1,36 @@
+{% extends 'base.html' %}
+{% load static %}
+{% block content %}
+/* fallback */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  src: url(https://fonts.gstatic.com/s/materialicons/v50/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -moz-font-feature-settings: 'liga';
+  -moz-osx-font-smoothing: grayscale;
+}
+
 <h3> Update Task </h3>
 <form method="POST" action="">
     {% csrf_token %}
     {{form}}
-	<input type="submit" name="Update Task" value="Edit to-do">
+	<button class="btn waves-effect waves-light col s1  pink darken-1" type="submit" name="Update Task">Edit
+    <i class="material-icons right ">send</i>
+  	</button>
 </form>
+{% endblock %}
