--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -3,13 +3,14 @@
 <html>
 <head>
 	<title>Starfish task Tracker</title>
-	<link rel="icon" href="{%static 'images/sfish.png'%}">
-	<link href="{% static 'https://fonts.googleapis.com/icon?family=Material+Icons' %}" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Bitter&family=Merriweather+Sans:wght@300&display=swap" rel="stylesheet">
+	{% load static %}
+	<link rel="icon" href="{% static 'images/sfish.png' %}">
       <!--Import materialize.css-->
       <link type="text/css" rel="stylesheet" href="{% static 'css/materialize.min.css' %}"  media="screen,projection"/>
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<link href="{% static 'https://fonts.googleapis.com/css2?family=Baloo+Paaji+2&family=Bitter&family=Merriweather+Sans:wght@300&display=swap' %}" rel="stylesheet">
 </head>
 
 <style type="text/css">
